Commentaire partie client

--- a/client/fontextractor.html
+++ b/client/fontextractor.html
@@ -227,6 +227,7 @@
 	<script type="text/javascript" src="js/session.js"></script>
 	<script type="text/javascript" src="js/init.js" ></script>
 	<script type="text/javascript" src="js/manipulate_canvas.js" ></script>
+	<script type="text/javascript" src="js/controller.js" ></script>
 	<script type="text/javascript" src="js/upload_file.js" ></script>
 </body>
 </html>
