--- a/client/fontextractor.html
+++ b/client/fontextractor.html
@@ -69,11 +69,11 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-						<a data-toggle="modal" href="#" data-target="#saveModal"><span id="button_export" class="glyphicon glyphicon-export" aria-hidden="true"></span></a>
+						<a data-toggle="modal" href="#" data-target="#saveModal" title="Export the font"><span id="button_export" class="glyphicon glyphicon-export" aria-hidden="true"></span></a>
 					</li>
 					<li>
 
-						<a href="#popup" data-toggle="modal" data-target=".bs-example-modal-sm"><span class="glyphicon glyphicon-plus" id="button_trash" aria-hidden="true"></span></a>
+						<a href="#popup" data-toggle="modal" data-target=".bs-example-modal-sm" title="Start with a new Image"><span class="glyphicon glyphicon-plus" id="button_trash" aria-hidden="true"></span></a>
 
 					</li>
 				</ul>
