Resolution bug firefox

--- a/client/fontextractor.html
+++ b/client/fontextractor.html
@@ -118,7 +118,7 @@
 								<div class="row">
 								  <div class="input-group spinner col-sm-5 col-sm-offset-1 modif-line-value">
 								    <div class="input-group-addon">Up</div>
-								    <input type="number" class="form-control" value="42" pattern="[0-9]*" id="up">
+								    <input type="text" class="form-control" value="42" pattern="[0-9]*" id="up">
 								    <div class="input-group-btn-vertical">
 								      <button class="btn btn-default" type="button" data-id="up"><i class="fa fa-caret-up"></i></button>
 								      <button class="btn btn-default" type="button" data-id="up"><i class="fa fa-caret-down"></i></button>
@@ -126,7 +126,7 @@
 								  </div>
 								  <div class="input-group spinner col-sm-5 col-sm-offset-1 modif-line-value">
 								    <div class="input-group-addon">Down</div>
-								    <input type="number" class="form-control" value="42" pattern="[0-9]*" id="down">
+								    <input type="text" class="form-control" value="42" pattern="[0-9]*" id="down">
 								    <div class="input-group-btn-vertical">
 								      <button class="btn btn-default" type="button" data-id="down"><i class="fa fa-caret-up"></i></button>
 								      <button class="btn btn-default" type="button" data-id="down"><i class="fa fa-caret-down"></i></button>
@@ -136,7 +136,7 @@
 								<div class="row">
 								  <div class="input-group spinner col-sm-5 col-sm-offset-1 modif-line-value">
 								    <div class="input-group-addon">Left</div>
-								    <input type="number" class="form-control" value="42" pattern="[0-9]*" id="left">
+								    <input type="text" class="form-control" value="42" pattern="[0-9]*" id="left">
 								    <div class="input-group-btn-vertical">
 								      <button class="btn btn-default" type="button" data-id="left"><i class="fa fa-caret-up"></i></button>
 								      <button class="btn btn-default" type="button" data-id="left"><i class="fa fa-caret-down"></i></button>
@@ -144,7 +144,7 @@
 								  </div>
 								  <div class="input-group spinner col-sm-5 col-sm-offset-1 modif-line-value">
 								    <div class="input-group-addon">Right</div>
-								    <input type="number" class="form-control" value="42" pattern="[0-9]*" id="right">
+								    <input type="text" class="form-control" value="42" pattern="[0-9]*" id="right">
 								    <div class="input-group-btn-vertical">
 								      <button class="btn btn-default" type="button" data-id="right"><i class="fa fa-caret-up"></i></button>
 								      <button class="btn btn-default" type="button" data-id="right"><i class="fa fa-caret-down"></i></button>
@@ -154,7 +154,7 @@
 								<div class="row">
 								   <div class="input-group spinner col-sm-5 col-sm-offset-3 modif-line-value">
 								    <div class="input-group-addon">Baseline</div>
-								    <input type="number" class="form-control" value="42" pattern="[0-9]*" id="baselineCC">
+								    <input type="text" class="form-control" value="42" pattern="[0-9]*" id="baselineCC">
 								    <div class="input-group-btn-vertical">
 								      <button class="btn btn-default" type="button" data-id="baselineCC"><i class="fa fa-caret-up"></i></button>
 								      <button class="btn btn-default" type="button" data-id="baselineCC"><i class="fa fa-caret-down"></i></button>
@@ -193,7 +193,7 @@
 						<div class="container_option_base" id="baseline_options">
 						  <div class="input-group spinner col-sm-5 col-sm-offset-1 modif-line-value">
 								<div class="input-group-addon">Baseline</div>
-								<input type="number" class="form-control" value="42" pattern="[0-9]*" id="baselineValue">
+								<input type="text" class="form-control" value="42" pattern="[0-9]*" id="baselineValue">
 								<div class="input-group-btn-vertical">
 								  <button class="btn btn-default" type="button" data-id="baselineValue"><i class="fa fa-caret-up"></i></button>
 								  <button class="btn btn-default" type="button" data-id="baselineValue"><i class="fa fa-caret-down"></i></button>
